# Pyrecall

./: .gitignore  .pyrecall.json  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  docs.html  index.html  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& cUserstolakPyrecall-1.venvScriptsActivate.ps1)  tatus
.github/workflows/: ci.yml  discord-issues.yml  discord-prs.yml  discord-release.yml  lint.yml  pyrecall-check.yml
examples/github-actions/: forgetting-check.yml
keel/: model.py
mimi/: __init__.py  cli.py  detector.py  live.py  model.py  rollback.py  snapshot.py  utils.py
mimi/benchmarks/: __init__.py  default.py
pyrecall/: __init__.py  cli.py  compress.py  detector.py  encrypt.py  hub.py  live.py  model.py  replay.py  rollback.py  snapshot.py  trackers.py  utils.py
pyrecall/benchmarks/: __init__.py  custom.py  default.py  modes.py
qwen-test/: train.jsonl
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_detector.py  test_hub.py  test_live.py  test_model.py  test_replay.py  test_rollback.py  test_serve.py  test_smoke_gpt2.py  test_smoke_learn.py  test_snapshot.py  test_trackers.py  test_utils_scoring.py
