[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimi"
version = "0.1.0"
description = "Keep your models balanced. Continuous fine-tuning with automatic forgetting detection and skill rollback."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "mimi contributors" }]
keywords = [
    "llm",
    "fine-tuning",
    "continual-learning",
    "catastrophic-forgetting",
    "lora",
    "peft",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mimi = "mimi.cli:app"

[project.urls]
Homepage = "https://github.com/Arths17/keel"
"Bug Tracker" = "https://github.com/Arths17/keel/issues"
PyPI = "https://pypi.org/project/mimi"

[tool.hatch.build.targets.wheel]
packages = ["mimi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
